Fix sections being in the wrong order on mobile

--- a/site/styles/layouts/_talkmefollowme.scss
+++ b/site/styles/layouts/_talkmefollowme.scss
@@ -14,7 +14,7 @@
 
   @include media(phone) {
     grid-column: 1 / -1;
-    grid-row: 5 / 6;
+    grid-row: 4 / 5;
     margin-bottom: 2rem;
   }
 }
@@ -25,6 +25,6 @@
 
   @include media(phone) {
     grid-column: 1 / -1;
-    grid-row: 6 / 7;
+    grid-row: 5 / 6;
   }
 }
